# safeintelligence_takehome

./: .gitignore  README.md  REVIEW.md  main.py  pyproject.toml
provided/: data.py  network.py  pgd.py  utils.py
tests/: test_pgd.py
tests/model_cache/: cached_model_weights.pth
