[tool.poetry]
name = "pgd_attack"
version = "0.1.0"
description = ""
authors = ["DanielSCrouch <daniel@safeintelligence.ai>"]
readme = "README.md"

packages = [
    { include = "provided" },
    { include = "solution" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "<2.0"
psutil = "*"
pandas = "*"
torch = "~2.2"
tdqm = "*"
einops = "*"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pandas-stubs = "^2.2.3.241009"
types-tqdm = "^4.66.0.20240417"
matplotlib-stubs = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = "."